--- a/Portfolio-Design/index.html
+++ b/Portfolio-Design/index.html
@@ -633,7 +633,9 @@
                     </div>
                 </div>
 
-                <form action="" class="contact__form grid">
+                <form action="https://formspree.io/f/mzbnbnjw"
+  method="POST"
+ class="contact__form grid">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
